<resources>
    <string name="app_name">GAM Trainer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_hint">Enter trainer name</string>
    <string name="account_hint">Enter trainer account</string>
    <string name="phone_hint">Enter trainer phone number</string>
    <string name="married">married</string>
    <string name="call">Call trainer</string>
    <string name="send_message">Send message</string>
    <string name="new_trainer">New Trainer</string>
    <string name="send_email">Send email via</string>
</resources>