<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".TrainerFragment"
    android:padding="30dp">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/image_container"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:id="@+id/avatar"
                android:src="@mipmap/ic_avatar"/>
            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/open_camera_btn"
                android:src="@drawable/ic_camera"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/information_container"
            android:orientation="vertical"
            android:layout_weight="3">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/name_hint"
                android:padding="10dp"
                android:id="@+id/name_edit_text"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/account_hint"
                    android:padding="10dp"
                    android:id="@+id/account_edit_text"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:inputType="number"
                        android:hint="@string/phone_hint"
                        android:id="@+id/phone_edit_text"/>
            <CheckBox
                android:id="@+id/married_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/married"/>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/form"
        android:layout_marginTop="50dp"
        android:orientation="vertical">
        <Button
            android:id="@+id/call_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/button_background"
            android:layout_marginBottom="30dp"
            android:text="@string/call"/>
        <Button
            android:id="@+id/send_message_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/button_background"
            android:text="@string/send_message"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>